style.css
body {
  margin: 0;
}
nav {
  display: flex;
  height: 100px;
  justify-content: flex-start;
  align-items: center;
  gap: 40px;
  padding: 0px 120px;
}
.navItem {
  font-weight: 600;
  display: block;
  text-decoration: none;
  color: black;
}
header {
  height: 462px;
  display: flex;
  justify-content: space-between;
  margin-top: 100px;
  padding: 0px 120px;
}
.badge {
  width: fit-content;
  padding: 12px 24px;
  border-radius: 10px;
  background-color: #e6eeff;
  margin-bottom: 40px;

  /* font */
  color: #000;
  font-size: 24px;
  font-style: normal;
  font-weight: 600;
  line-height: 150%; /* 36px */
}
header h1 {
  color: #333;
  font-size: 64px;
  font-style: normal;
  font-weight: 600;
  line-height: 125%; /* 80px */
  letter-spacing: -1.28px;
}
header h1 em {
  background: linear-gradient(
    99deg,
    #001f8f 3.58%,
    rgba(36, 255, 203, 0.5) 90.34%
  );
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
.headerLinkContainer {
  display: flex;
}
.headerLink {
  padding: 24px 40px;
  display: block;
  text-decoration: none;
  border-radius: 16px;
  margin-right: 10px;
  font-size: 24px;
  font-style: normal;
  font-weight: 600;
  line-height: 150%; /* 36px */
}
.github {
  background-color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 190px;
  height: 30px;
  color: #e6eeff;
}
.resume {
  background-color: white;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 182px;
  height: 22px;
  border: 4px solid #403930;
  color: #403930;
}
.headerRight {
  display: flex;
  align-items: center;
  justify-content: center;
}
.headerRight img {
  border-radius: 500px;
  border: 10px solid #bcf2f9;
  width: 345px;
  height: 330px;
  object-fit: cover;
}
.infoContainer {
  position: relative;
  margin: 100px 0px 0px 0px;
  padding: 100px 120px;
  background: linear-gradient(
    96deg,
    rgba(189, 210, 255, 0.4) 1.72%,
    rgba(116, 224, 215, 0.4) 158.93%
  );
}
.infoTitle {
  color: #000;
  font-size: 40px;
  font-style: normal;
  font-weight: 700;
  line-height: 125%; /* 50px */
  letter-spacing: -0.8px;
  margin-bottom: 20px;
}
.info {
  color: #333;
  font-size: 20px;
  font-style: normal;
  font-weight: 500;
  line-height: 150%; /* 30px */
}
.superman_icon {
  position: absolute;
  width: 119px;
  height: 119px;
  right: 700px;
  top: 30px;
}
.techContainer {
  padding: 100px 120px;
}
.techInfoContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 80px;
}
.techTitle {
  color: #000;
  text-align: center;
  font-size: 40px;
  font-style: normal;
  font-weight: 700;
  line-height: 26px; /* 65% */
  letter-spacing: -0.8px;
  margin-bottom: 24px;
}
.techInfo {
  color: #333;
  text-align: center;
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
  line-height: 26px; /* 130% */
}
.iconContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin-bottom: 40px;
}
.iconContainer img {
  width: 100px;
  height: 100px;
  margin: 0px 40px;
}
.projectContainer {
  padding: 80px 120px 120px 120px;
  background: rgba(244, 244, 244, 0.5);
}
.myProjectTitle {
  color: #403930;
  font-size: 40px;
  font-style: normal;
  font-weight: 600;
  line-height: 125%; /* 50px */
  letter-spacing: -0.8px;
  margin-bottom: 32px;
}
.myProject {
  background-color: #e6eeff;
  border-radius: 24px;
  height: 350px;
  padding: 0px 40px;
  display: flex;
  justify-content: space-between;
  margin-bottom: 32px;
}
.projectInfoContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.projectTitle {
  color: #403930;
  font-size: 24px;
  font-style: normal;
  font-weight: 600;
  line-height: 150%; /* 36px */
}
.projectInfo {
  color: #403930;
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: 150%; /* 24px */
}
.projectLinkContainer {
  margin-top: 36px;
}

.projectNotionLink {
  color: #405ba1;
  font-size: 20px;
  font-style: normal;
  font-weight: 600;
  line-height: 150%; /* 30px */
  text-decoration-line: underline;

  margin-right: 24px;
}
.projectGithubLink {
  color: #00446a;
  font-size: 20px;
  font-style: normal;
  font-weight: 600;
  line-height: 150%; /* 30px */
  text-decoration-line: underline;
}
.feedbackContainer {
  padding: 80px 0px 100px 0px;
  display: flex;
  align-items: center;
  flex-direction: column;
}
.feedbackTitle {
  color: #403930;
  font-size: 40px;
  font-style: normal;
  font-weight: 700;
  line-height: 125%; /* 50px */
  letter-spacing: -0.8px;
  margin-bottom: 60px;
}
.feedbackScrollContainer {
  display: flex;
}
.feedback {
  background-color: #fafafa;
  padding: 20px 36px;
  width: 350px;
  border-radius: 15px;
  margin-right: 40px;
  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.15);
}
.feedbackInfo {
  color: #403930;
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
  line-height: 150%; /* 30px */
  white-space: normal;
}
.feedbackFrom {
  margin-top: 20px;
  color: #403930;
  text-align: center;
  font-size: 20px;
  font-style: normal;
  font-weight: 700;
  line-height: 25px; /* 125% */
}
.aspirationContainer {
  background: #e6eeff;
  padding: 100px 120px;
  display: flex;
  align-items: center;
}
.aspiration {
  color: #403930;
  font-size: 48px;
  font-style: normal;
  font-weight: 600;
  line-height: 125%; /* 60px */
  letter-spacing: -0.96px;
}
footer {
  height: 182px;
  background: #fafafa;
  padding: 53px 60px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.copyright {
  color: var(--Dark, #21243d);
  text-align: center;
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  margin-top: 24px;
}
.contactMe {
  border-radius: 50px;
  border: 10px solid #bbd5f7;
  background: linear-gradient(
    98deg,
    #bed3ff -10.83%,
    #d2f3e5 51.79%,
    #ffebd9 110.76%
  );
  text-decoration: none;
  width: 150px;
  height: 68px;
  display: flex;
  justify-content: center;
  align-items: center;

  color: rgba(64, 57, 48, 0.8);
  text-align: center;
  font-family: Pretendard;
  font-size: 20px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
}

